# VCU

./: .gitignore  IMPLEMENTATION_COMPLETE.md  INTEGRATION.md  INTEGRATION_VERIFICATION.md  MOCK_DATA_EXPLANATION.md  MOCK_DATA_REMOVAL.md  PROJECT_DOCUMENTATION.md  PROJECT_VALIDATION.md  README.md  debug_report.txt
Backend/: .gitignore  DATASETS_GUIDE.md  IMPLEMENTATION.md  PORTABILITY_GUIDE.md  QUICK_TRAIN.md  README.md  SETUP.md  TRAINING_GUIDE.md  create_table.py  diagnostic_test.py  fix_database.py  install.bat  install_gpu_pytorch.bat  prepare_data.py  pyproject.toml  requirements.txt  run.bat  system_check.py  test_integration.py  test_yolo.py
Backend/app/: main.py
Backend/app/api/v1/routes/: video.py
Backend/app/api/v1/schemas/: response.py  video.py
Backend/app/core/: config.py  logging_config.py
Backend/app/db/: crud.py  database.py  models.py
Backend/app/ml/models/: lstm_model.py  yolo_detector.py
Backend/app/ml/pipeline/: frame_extractor.py  preprocessor.py
Backend/app/services/: cleanup_service.py  confidence_service.py  frame_service.py  groq_service.py  inference_service.py  inference_service_debug.py  video_service.py
Backend/app/utils/: constants.py  file_utils.py  metrics.py  time_utils.py
Backend/database/: README.md  create_trained_models_table.sql  schema.sql
Backend/scripts/: check_gpu.py  config.py  create_normal_clips.py  db_utils.py  download_models.py  extract_features.py  inference_from_db.py  init_db.py  train_lstm.py  visualize_frames.py  yolo_db_register.py
Backend/tests/api/: test_api.py
Backend/tests/ml/: test_frame_extractor.py  test_lstm.py  test_yolo.py
Backend/tests/services/: test_confidence.py  test_crud.py  test_file_utils.py  test_metrics.py
FIXES/: FALSE_POSITIVE_FIX_GUIDE.md
Frontend/: .env.example  .gitignore  BUG_REPORT.md  FIXES_APPLIED.md  GET_STARTED.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  STRUCTURE.md  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.css  App.jsx  index.css
Frontend/src/context/: ThemeContext.jsx
docs/: API_REFERENCE.md  Backend_README.md  DATABASE_SCHEMA.md  README.md  TRAINING_GUIDE.md
(+21 files in other folders)
