[project]
name = "accident-detection-backend"
version = "1.0.0"
description = "Vehicle crash detection system using YOLOv8 + LSTM"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "pymysql==1.1.0",
    "mysql-connector-python==8.3.0",
    "torch==2.2.0+cu118",
    "torchvision==0.17.0+cu118",
    "ultralytics==8.1.0",
    "opencv-python==4.9.0.80",
    "numpy==1.26.3",
    "scikit-learn==1.4.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "groq==0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.3",
    "httpx==0.26.0",
    "ruff==0.1.11",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
